# TAED2_Mates

./: .gitignore  Makefile  README.md  data.dvc  dvc.yaml  linter.txt  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: pylint.yml  pytest.yml
READMEs/: dataREADME.md  docsREADME.md  metricsREADME.md  notebooksREADME.md  testsREADME.md
data/: README.md  dog_catalogue_data.json
data/output/: gaissa_log.txt  predictions_test.csv
data/processed/: .gitignore
data/raw/: .gitignore  labels.csv.dvc  test.dvc  train.dvc
docs/: Dataset_card.md  Model_card.md  README.md  notebook_emission.ipynb
mates/: README.md  __init__.py  config.py  dataset.py  deepchecks.py  features.py  matesREADME.md  plots.py  streamlit.py  utils.py
mates/app/: api.py  app.py
mates/features/: deepchecks.py  features.py  utils.py
mates/features/gaissa/: calculator.py  gaissaplugin.py  main_script.py  plugin_interface.py
mates/modeling/: __init__.py  predict.py  prepare.py  train.py
metrics/: README.md  adam_32_emissions.csv  adam_62_emissions.csv  adamw_32_emissions.csv  adamw_62_emissions.csv  mobilenet_batch_32_adam_emissions.csv  mobilenet_batch_32_emissions.csv  mobilenet_batch_32_rmsprop_emissions.csv  mobilenet_batch_64_emissions.csv  mobilenet_exp_batch_32_emissions.csv  mobilenet_exp_batch_62_emissions.csv  mobilenet_test_emissions.csv  rmsprop_32_emissions.csv  rmsprop_62_emissions.csv  sgd_32_emissions.csv  sgd_62_emissions.csv
metrics/gaissa/: gaissa_mobilenet_exp_batch_62.csv
mlruns/0/: meta.yaml
models/: .gitignore  Model_card.md  README.md  modelsREADME.md
notebooks/: 01_dataset_exploration.ipynb  README.md  dataset_exploration.ipynb  model_exploration.ipynb
reports/: README.md  reportsREADME.md
reports/gaissa/: gaissaplugin.py
tests/: README.md  test_api.py  test_create_batches.py  test_create_model.py  test_get_label.py  test_load_model.py  test_load_params.py  test_load_processed_data.py  test_model.py  test_predict.py  test_predict_single.py  test_prepare.py  test_process_image.py  test_read_data.py  test_read_label.py  test_read_labels.py  tests-report.xml
