[project]
name = "mates"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["mates"]
force_sort_within_sections = true

[tool.poetry]
name = "mates"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
mlflow = "^2.16.2"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
tensorflow-hub = "^0.16.1"
tensorflow = "^2.17.0"
keras = "^3.5.0"
codecarbon = "2.6"
pynblint = "^0.1.6"
scipy = "^1.9.3"
pylint = "^3.3.1"
pyyaml = "^6.0.2"
ipdb = "^0.13.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.1"}
python-multipart = "^0.0.12"
streamlit = "^1.39.0"
torchvision = "^0.19.1"
deepchecks = {extras = ["vision"], version = "^0.18.1"}
starlette = ">=0.40.0"
werkzeug = ">=3.0.6"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.7"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["mates/modeling/train.py", "mates/streamlit.py", "mates/features/gaissa/*", "mates/features/deepchecks.py"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
addopts = "--junitxml=tests/tests-report.xml --cov=mates --cov-report=html:reports/coverage"

[tool.pylint.'MESSAGES CONTROL']
disable = ["W0621", "W0613"]


